[tool.poetry]
name = "complexCGR"
version = "0.1.0"
description = "complex Chaos Game Representation for DNA"
authors = ["Jorge Avila <jorgeavilacartes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.61.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
