[tool.poetry]
name = "complexCGR"
version = "0.2.0"
description = "complex Chaos Game Representation for DNA"
authors = ["Jorge Avila <jorgeavilacartes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.61.2"
matplotlib = "^3.4.2"
Pillow = "^8.3.1"
numpy = "^1.21.1"
biopython = "^1.79"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
