[tool.poetry]
name = "complexcgr"
version = "0.8.0"
description = "complex Chaos Game Representation for DNA"
authors = ["Jorge Avila <jorgeavilacartes@gmail.com>"]
maintainers = ["Jorge Avila <jorgeavilacartes@gmail.com>"]
repository = "https://github.com/AlgoLab/complexCGR"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.61.2"
matplotlib = "^3.4.2"
Pillow = "^10.0"
numpy = "^1.22.3"
biopython = "^1.79"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
